W02 | Chamber Directory | fix sesktop dark mode background color, fix missing space above footer

--- a/chamber/styles/style-large.css
+++ b/chamber/styles/style-large.css
@@ -17,7 +17,7 @@
         --header-txt: var(--black);
         --nav-bg: var(--skyblue);
         --nav-txt: var(--black);
-        --body-bg: var(--lightblue);
+        --body-bg: var(--green);
         --body-txt: var(--black);
         --card-bg: var(--darkblue);
         --card-txt: var(--black);
